<resources>
    <string name="app_name">Crypto Wallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_contact">New contact</string>
    <string name="contact_detail">Contact detail</string>
    <string name="name">Name</string>
    <string name="key">Public key</string>
    <string name="add_contact_button">Add contact</string>
    <string name="send_button">Send</string>
    <string name="update">Update</string>
    <string name="update_contact_button">Update contact</string>
    <string name="delete">Delete</string>
    <string name="sign_out">Sign out</string>
    <string name="recipient">Recipient</string>
    <string name="amount">Amount</string>
    <string name="xlm">XLM</string>
    <string name="stellar">Stellar Lumens</string>
    <string name="nav_home">Home</string>
    <string name="nav_transaction">Transactions</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_account">Account</string>
    <string name="home_label">HOME</string>
    <string name="balance_label">Current balance of your account</string>
    <string name="no_contact_available">No contacts available</string>
    <string name="no_transactions_available">No transactions available</string>
    <string name="no_balance_available">No balance available</string>
    <string name="login">Enter username</string>
    <string name="password">Enter password</string>
    <string name="loginbutton">Login</string>
    <string name="exist">Already have account?</string>
    <string name="confirm">Confirm</string>
    <string name="privatekey">Enter Private Key</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="register_heading">Register account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Crypto Wallet"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contact_icon">Contact Icon</string>

    <string name="add_amount">Amount</string>
    <string name="send_transaction_button">Send transaction</string>
    <string name="add_transaction">Add transaction</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="contacts">Contacts</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="date">Transaction date</string>
    <string name="contact">Contact</string>
    <string name="menu_refresh">Sync transactions</string>
    <string name="continue_button">Continue</string>
    <string name="private_key">Private Key</string>
    <string name="public_key">Public Key</string>
    <string name="please_save_your_private_and_public_keys">Please save your keys</string>
    <string name="loading">Loading…</string>
    <string name="log_in">Login</string>
    <string name="import_account">Import Account</string>
    <string name="import_button">Import</string>
    <string name="use_another_account">Use another account</string>
</resources>