<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="contact"
            type="sk.stuba.fei.mobv.cryptowallet.database.entity.Contact" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contact_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <ImageView
            android:id="@+id/rowImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/contact_icon"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rowName"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="0dp"
            android:text="@{contact.name}"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rowSideIcon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/rowImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.486"
            tools:text="@string/name" />

        <ImageView
            android:id="@+id/rowSideIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/contact_detail"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>