<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.authentication.PrintKeyPairFragment">

    <data>
        <variable
            name="viewmodel"
            type="sk.stuba.fei.mobv.cryptowallet.viewmodel.account.AccountViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/please_save_your_private_and_public_keys" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/publicKeyLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/public_key"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/publicKey"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.keypair.privateKey}"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/privateKeyLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/private_key"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicKeyLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/privateKey"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewmodel.keypair.publicKey}"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/continuebutton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/continue_button"
        android:padding="5dip"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privateKeyLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>