<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.authentication.LoginFragment">

    <data>
        <import type="sk.stuba.fei.mobv.cryptowallet.util.FormError" />
        <variable
            name="viewmodel"
            type="sk.stuba.fei.mobv.cryptowallet.viewmodel.authentication.AuthenticationViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="48dp"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/loginbutton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/privateKey"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/privatekey"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/white"
            app:counterEnabled="true"
            app:counterMaxLength="56"
            app:counterTextColor="@color/white"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:errorText="@{viewmodel.keyError.message}"
            app:errorTextColor="@color/errorDark"
            app:helperText="*Required"
            app:helperTextTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addKeyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/button_background"
            android:onClick="@{ () -> viewmodel.login(addKeyText.getText().toString())}"
            android:padding="5dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button_outline"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>